FIX: DashboardCard z-index

--- a/client/src/DashboardCard/DashboardCard.module.scss
+++ b/client/src/DashboardCard/DashboardCard.module.scss
@@ -1,6 +1,5 @@
 .defaultOpacity{
   opacity:1;
-  z-index:1;
   position: relative;
   transition:all 0.15s ease-in-out !important;
 }
@@ -14,6 +13,9 @@
 .interactive:hover{
   background-color:#f7f8ff !important;
   box-shadow:0px 0px 0px 1px rgba(0,54,255,0.3) !important;
+}
+.defaultOpacity.rainbow{
+  z-index:1;
 }
 .rainbow:before{
   content:"";
